# ML-Kernel-Library-ARM-Optimized-Design-for-Apple-Silicon

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  generate_report.py
benchmarks/: bench_activations.cpp  bench_gemm.cpp
include/: activations.h  gemm.h
src/: activations.cpp  bindings.cpp  cache_utils.cpp  gemm_accelerate.cpp  gemm_fp16.cpp  gemm_mt.cpp  gemm_naive.cpp  gemm_neon.cpp  gemm_tiled.cpp
tests/: benchmark_only.py  ml_demo.py  test_activations.cpp  test_gemm.cpp  test_python_bridge.py
visualization/: report.html
